--- a/style.css
+++ b/style.css
@@ -47,13 +47,8 @@ a {
     top: 0;
     left: 0;
     width: 100%;
-<<<<<<< HEAD
     height: 100%;
     background: rgba(0, 0, 0, 0.9);
-=======
-    overflow: hidden;
-    background: rgba(0, 0, 0, 0.8);
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
     color: white;
     display: flex;
     flex-direction: column;
@@ -67,18 +62,7 @@ a {
 }
 
 .card-container:hover .hover-info {
-<<<<<<< HEAD
     opacity: 1;
-=======
-    bottom: 0;
-    width: 240px;
-    height: 355px;
-    color: #cc0000;
-}
-
-.card-container:hover img {
-    transform: scale(1.05);
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
 }
 
 .hover-info h3 {
@@ -92,10 +76,20 @@ a {
     margin: 5px 0;
 }
 
+.hover-info .rate {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+
 .hover-info .rate::before {
     content: "★";
     color: #cc0000;
     margin-right: 5px;
+
 }
 
 .hover-info .genres {
@@ -118,10 +112,6 @@ a {
     align-items: center;
     z-index: 1000;
     padding-top: 40px;
-<<<<<<< HEAD
-=======
-
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
 }
 
 .MC {
@@ -137,20 +127,15 @@ a {
     position: relative;
 }
 
-<<<<<<< HEAD
 .MC .texte-content {
-=======
-.MC .texteContent {
-    
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
     grid-template-rows: auto auto auto auto;
-    padding-top: 55px;
+    padding-top: 20px;
     margin: 20px;
     display: flex;
-     margin: 20px;
+    margin: 20px;
+
 }
 
-<<<<<<< HEAD
 .MC .texte-content .Film {
     margin-bottom: 30px;
 }
@@ -165,31 +150,18 @@ a {
 
 .MC .texte-content .synopsys {
     margin-bottom: 10px;
-=======
-
-.MC .texteContent .Film {
-    margin-bottom: 30px; /* Plus d'espace après le titre */
-}
-.MC .texteContent .rate {
-    margin-bottom: 15px; /* Espace après la note */
-}
-.MC .texteContent .typeFilm {
-    margin-bottom: 10px; /* Espace après le type */
-}
-.MC .texteContent .synopsys {
-    margin-bottom: 10px; /* Espace après le synopsis */
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
 }
 
 .MC .Film {
     color: #cc0000;
+    margin-top: 80px;
 }
 
 .modal .MC .mimage {
     width: 250px;
     height: 351px;
     align-self: center;
-    margin: 20px;
+    margin: 40px;
     margin-left: 50px;
     border: #ffffff solid;
 }
@@ -210,35 +182,7 @@ a {
     font-weight: 300;
 }
 
-<<<<<<< HEAD
 .close-btn1 {
-=======
-.casting {
-    margin-top: 20px;
-}
-
-.casting h3 {
-    color: #cc0000;
-    margin-bottom: 10px;
-}
-
-.casting ul {
-    list-style: none;
-    padding: 0;
-}
-
-.casting li {
-    margin-bottom: 5px;
-    font-size: 14px;
-}
-
-
-
-
-
-
-.close-btn1{
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
     margin-bottom: -20px;
     margin-left: -700px;
     z-index: 1000;
@@ -616,19 +560,10 @@ footer .navFoot ul li a:hover {
     left: 1px;
 }
 
-<<<<<<< HEAD
 .custom-button-next img{
     font-size: 30px;
     width: 20px;
     height: 20px;
-=======
-/* Positionnement des flèches de navigation */
-.custom-button-next img {
-    font-size: 30px;
-    background: transparent;
-    width: 40px;
-    height: 40px;
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
     display: flex;
     align-items: center;
     justify-content: center;
@@ -638,49 +573,13 @@ footer .navFoot ul li a:hover {
     cursor: pointer;
     border-radius: 50%;
     z-index: 10;
-<<<<<<< HEAD
     opacity: 0.8;
     border: none;
     right: -1px;
 }
 
-=======
-    right: 10px;
-    
-}
-
-.custom-button-prev img {
-    font-size: 30px;
-    background: transparent;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    border-radius: 50%;
-    z-index: 10;
-    left: 10px;
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
 
 .custom-button-prev:hover, .custom-button-next:hover {
     opacity: 1;
 }
 
-<<<<<<< HEAD
-=======
-.custom-button-next img {
-    width: 20px;
-    height: 20px;
-
-}
-
-.custom-button-prev img {
-    width: 20px;
-    height: 20px;
-
-}
->>>>>>> ae2cfc54e6df47dd9070a7de7edfc806de7dc85f
