--- a/style.css
+++ b/style.css
@@ -202,8 +202,8 @@ a {
 
 .close-btn {
     position: absolute;
-    top: 0px;
-    left: 10px;
+    top: 3px;
+    left: 8px;
     width: 10px;
     height: 10px;
     display: flex;
@@ -241,6 +241,10 @@ a {
     margin: 30px 0px;
     display: flex;
     justify-content: center;
+    border: 1px solid white;
+    border-radius: 5px;
+    width: fit-content;
+    margin: 30px auto;
 }
 
 .btnContainer button {
@@ -249,8 +253,15 @@ a {
     border: 1px solid white;
     color: white;
     letter-spacing: 1px;
+    background: transparent;
     font-size: 0.8em;
     font-weight: 800;
+    background-color: #000;
+    background: transparent;
+}
+
+.btnContainer .log {
+    background-color: #cc0000;
 }
 
 .btnContainer .sign {
